Update 3장 기본 개념 구조.md

--- a/개념/3장/3장 기본 개념 구조.md
+++ b/개념/3장/3장 기본 개념 구조.md
@@ -87,12 +87,12 @@ retries - 일시적인 오류로 인해 전송에 실패한 데이터를 다시 
 
 batch.size - 프로듀서는 동일한 파티션으로 보내는 여러 데이터를 함께 배치로 보내려고 시도 → 성능 도움
 
-[linger.ms](http://linger.ms) - 메세지를 위해 기다리는 시간을 조정
+linger.ms - 메세지를 위해 기다리는 시간을 조정
 
-[transactional.id](http://transactional.id) - ‘정확히 한 번 전송’을 위해 사용하는 옵션, 동일한 TransactionalID에 한해 정확히 한 번을 보장, 옵션을 사용하기 전 enable.idempotence를 true로 설정
+transactional.id - ‘정확히 한 번 전송’을 위해 사용하는 옵션, 동일한 TransactionalID에 한해 정확히 한 번을 보장, 옵션을 사용하기 전 enable.idempotence를 true로 설정
 
 ```bash
-[kafka-topics.sh](http://kafka-topics.sh) --bootstrap-server<  >.foo.bar:9092 --create --topic <  > --partitions 1 --replication-factor 3
+kafka-topics.sh --bootstrap-server<  >.foo.bar:9092 --create --topic <  > --partitions 1 --replication-factor 3
 토픽 생성
 ```
 
@@ -108,11 +108,11 @@ bootstrap.servers - 프로듀서와 동일하게 브로커의 정보를 입력
 
 fetch.min.bytes - 한번에 가져올 수 있는 최소 데이터 크기, 데이터가 누적될 때까지 기다림
 
-[group.id](http://group.id) - 컨슈머가 속한 컨슈머 그룹을 식별하는 식별자
+group.id - 컨슈머가 속한 컨슈머 그룹을 식별하는 식별자
 
-[heartbeat.interval.ms](http://heartbeat.interval.ms) - 컨슈머의 상태가 active임을 의미, [session.timeout.ms](http://session.timeout.ms)와 밀접한 관계가 있음, session.timeout.ms보다 낮은 값으로 설정 1/3
+heartbeat.interval.ms - 컨슈머의 상태가 active임을 의미, [session.timeout.ms](http://session.timeout.ms)와 밀접한 관계가 있음, session.timeout.ms보다 낮은 값으로 설정 1/3
 
-[max.partition.timeout.ms](http://max.partition.timeout.ms) - 파티션당 가져올 수 있는 최대 크기를 의미
+max.partition.timeout.ms - 파티션당 가져올 수 있는 최대 크기를 의미
 
 enable.auto.commit - 컨슈머가 종료된 것인지를 판단
 
@@ -120,7 +120,7 @@ auto.offset.reset - 백그라운드로 주기적으로 오프셋을 커밋
 
 fetch.max.bytes - 한 번의 가져오기 요청으로 가져올 수 있는 최대 크기
 
-[group.instance.id](http://group.instance.id) - 컨슈머의 고유 식별자
+group.instance.id - 컨슈머의 고유 식별자
 
 isolation.level - 트랜잭션 컨슈머에서 사용되는 옵션으로, read_uncommitted는 기본값으로 모든 메세지를 읽고, read_committed는 트랜잭션이 완료된 메시지만 읽음
 
@@ -128,4 +128,4 @@ max.poll.records - 한 번의 poll() 요청으로 가져오는 최대 메시지 
 
 partition.assignment.strategy - 파티션 할당 전략이며, 기본값은 range
 
-[fetch.max.wait.ms](http://fetch.max.wait.ms) - fetch.min.bytes에 의해 설정된 데이터보다 작은 경우 요청에 대한 응답을 기다리는 최대 시간
+fetch.max.wait.ms - fetch.min.bytes에 의해 설정된 데이터보다 작은 경우 요청에 대한 응답을 기다리는 최대 시간
