Update 3장 기본 개념 구조.md

--- a/개념/3장/3장 기본 개념 구조.md
+++ b/개념/3장/3장 기본 개념 구조.md
@@ -110,7 +110,7 @@ fetch.min.bytes - 한번에 가져올 수 있는 최소 데이터 크기, 데이
 
 group.id - 컨슈머가 속한 컨슈머 그룹을 식별하는 식별자
 
-heartbeat.interval.ms - 컨슈머의 상태가 active임을 의미, [session.timeout.ms](http://session.timeout.ms)와 밀접한 관계가 있음, session.timeout.ms보다 낮은 값으로 설정 1/3
+heartbeat.interval.ms - 컨슈머의 상태가 active임을 의미, session.timeout.ms와 밀접한 관계가 있음, session.timeout.ms보다 낮은 값으로 설정 1/3
 
 max.partition.timeout.ms - 파티션당 가져올 수 있는 최대 크기를 의미
 
